Bug 476450 - Global animation speed setting no longer affects smooth scrolling
Summary: Global animation speed setting no longer affects smooth scrolling
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kirigami
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: Master
Platform: Compiled Sources Other
: NOR normal
Target Milestone: Not decided
Assignee: kdelibs bugs
URL:
Keywords: accessibility, qt6, regression
Depends on:
Blocks:
 
Reported: 2023-11-02 01:06 UTC by Fushan Wen
Modified: 2023-12-02 01:30 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fushan Wen 2023-11-02 01:06:25 UTC
SUMMARY
After Kirigami platform plugin was renamed, WheelHandler no longers receives longDuration updates from the platform Units.


STEPS TO REPRODUCE
1. Adjust animation speed in systemsettings
2. Test scrolling up and down
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: kirigami at 5892e5b39c265acf06e6cea166a173aaa994cb96
Qt Version: 6.6.0

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2023-11-02 15:39:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kirigami/-/merge_requests/1360
Comment 2 Fushan Wen 2023-11-02 16:52:04 UTC
Git commit b6bd189d92acc3fa73f903f7c31bf74a79221b3d by Fushan Wen.
Committed on 02/11/2023 at 16:37.
Pushed by fusionfuture into branch 'master'.

Units: make ctor protected function

Otherwise when creating singletons, the engine will always prefer the
default ctor instead of the static create function.
FIXED-IN: 6.0

M  +1    -1    src/platform/units.h

https://invent.kde.org/frameworks/kirigami/-/commit/b6bd189d92acc3fa73f903f7c31bf74a79221b3d
Comment 3 Bug Janitor Service 2023-11-24 09:54:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/qqc2-desktop-style/-/merge_requests/330
Comment 4 Fushan Wen 2023-12-02 01:30:37 UTC
Git commit 243043f6a24fb8c31a88d640bb494f93bae6873a by Fushan Wen.
Committed on 02/12/2023 at 01:50.
Pushed by fusionfuture into branch 'master'.

kirigami-plasmadesktop-integration: test animation speed modifier

M  +5    -0    CMakeLists.txt
M  +2    -0    kirigami-plasmadesktop-integration/CMakeLists.txt
A  +21   -0    kirigami-plasmadesktop-integration/autotests/CMakeLists.txt
A  +124  -0    kirigami-plasmadesktop-integration/autotests/animationspeedmodifiertest.cpp     [License: LGPL(v2.1+)]
A  +16   -0    kirigami-plasmadesktop-integration/autotests/animationspeedmodifiertest.qml     [License: LGPL(v2.1+)]

https://invent.kde.org/frameworks/qqc2-desktop-style/-/commit/243043f6a24fb8c31a88d640bb494f93bae6873a