Units: make ctor protected function

Otherwise when creating singletons, the engine will always prefer the
default ctor instead of the static create function.

BUG: 476450
FIXED-IN: 6.0